# 42cursus

./: Makefile  README.md  a.out  leak.c  main.c
Libft/: Makefile  ft_atoi.c  (+32 more)
push_swap/: CMakeLists.txt  Initialization.c  Makefile  checker  error_handling.c  greedy.c  greedy_a.c  greedy_b.c  indexing.c  main.c  operation.c  operation1.c  operation2.c  optimization.c  parsing.c  partitioning.c  preprocessing.c  printing.c  push_swap  push_swap.h  range.c  searching.c  sorting.c  stack.c  stack1.c  stack2.c
push_swap/Libft/: Makefile  ft_atoi_valid.c  ft_isascii.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstmap_bonus.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  libft.h
push_swap/bonus/: checker_bonus.c  checker_bonus.h  error_handling.c  get_next_line_bonus.c  initialization.c  operation1.c  operation2_bonus.c  parsing.c  parsing_bonus.c  preprocessing.c  preprocessing_bonus.c  stack1.c  stack2_bonus.c
push_swap/ft_printf/: Makefile
push_swap/ft_printf/Libft/: Makefile  ft_strdup.c
push_swap/ft_printf/mandatory/: ft_printf.h  ft_put.c  init.c  type.c  width.c
push_swap/log_error/five/: test_0  test_1  test_11  test_15  test_16  test_17  test_18  test_19  test_20  test_21  test_22  test_23  test_24  test_26  test_27  test_28  test_30  test_31  test_32  test_34  test_35  test_36  test_37  test_40  test_41  test_43  test_44  test_45  test_46  test_47  test_49  test_5  test_51  test_52  test_54  test_56  test_57  test_58  test_6  test_60  (+27 more)
push_swap/tester/: Makefile  push_swap
(+319 files in other folders)
